# hercule

./: .env.example  .gitignore  .pre-commit-config.yaml  FINAL_UI_TEST_CHECKLIST.md  LICENSE  MANUAL_TEST_GUIDE.md  QUICK_START_TESTING.md  README.md  TESTING_README.md  TEST_CHECKLIST.md  TEST_REPORT.md  UI_TESTING_GUIDE.md  run_tests.bat  start.bat  test_backend_connection.bat  test_ui_manual.py  verify_setup.bat
backend/: README.md  cache.py  main.py  models.py  pyproject.toml  requirements.txt  service_discovery.py  service_llm.py  test_backend.py  test_discovery.py
extension/: .gitkeep  README.md  manifest.json  package-lock.json  package.json  popup.html  test_ui_visual.html  tsconfig.json  vite.config.ts  vitest.config.ts
extension/src/content/: content.ts
extension/src/popup/: App.tsx  index.css
extension/src/popup/components/: ActionItems.tsx  ErrorBoundary.tsx  Icons.tsx  RedFlags.tsx  Summary.tsx  TrafficLight.tsx
extension/src/test/: setup.ts
extension/src/test/components/: RedFlags.test.tsx  Summary.test.tsx  TrafficLight.test.tsx
frontend/: .gitignore  README.md  create_icons.py  manifest.json  package-lock.json  package.json  popup.html  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/.husky/: pre-commit  pre-commit.ps1
frontend/src/: config.ts
frontend/src/content/: content.ts
frontend/src/popup/: App.tsx  index.css
frontend/src/popup/components/: ActionItems.tsx  RedFlags.tsx  Summary.tsx  TrafficLight.tsx
frontend/src/test/: setup.ts  types.test.ts
frontend/src/test/components/: RedFlags.test.tsx  (+2 more)
shared/: types.ts
